feat: config auth session with next auth

--- a/.env
+++ b/.env
@@ -5,3 +5,11 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://local_user:local_password@localhost:5432/clone_udemy?schema=public"
+
+# GitHub
+GITHUB_ID=
+GUTHUB_SECRET=
+
+# Google
+GOOGLE_ID=
+GOOGLE_SECRET=
