--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@auth/prisma-adapter": "^2.7.3",
     "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.9.1",
+    "@mux/mux-node": "^9.0.1",
+    "@mux/mux-player-react": "^3.2.4",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.4",
