--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next": "14.2.12",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.3.0",
+    "query-string": "^9.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
